--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.17.0
   http: ^0.13.4
   shimmer: ^2.0.0
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
